--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
       </div>
     </div>
     <div class="container mx-auto px-4 border-t border-gray-200">
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-6 gap-4 py-4 items-center">
+        <div class="py-2 lg:hidden">
+            <button id="toggleFiltersBtn" class="w-full px-4 py-2 text-sm font-semibold text-gray-700 bg-gray-100 rounded-lg hover:bg-gray-200 flex justify-between items-center">
+                <span>Show Filters & Options</span>
+                <svg id="toggleFiltersIcon" class="w-5 h-5 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+            </button>
+        </div>
+        
+        <div id="mobileFilterControls" class="hidden lg:grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-6 gap-4 py-4 items-center">
             <input id="searchInput" type="text" placeholder="Search: CEO, Ticker, or Co." class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow sm:col-span-2 lg:col-span-1" />
             <select id="founderFilter" class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow">
               <option value="">All CEOs</option>
