--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
   <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#4338ca">
   
   <meta property="og:title" content="CEORater">
   <meta property="og:description" content="NASDAQ 100 CEO Performance & Compensation Analytics" />
@@ -19,7 +19,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
 
   <script>
@@ -43,6 +43,7 @@
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans">
 
+  <!-- ALL YOUR EXISTING BODY CONTENT GOES HERE -->
   <header class="bg-white shadow-md sticky top-0 z-30">
     <div class="container mx-auto px-4">
       <div class="flex justify-between items-center py-3">
@@ -214,5 +215,20 @@
 
   <script src="firebase-config.js"></script>
   <script type="module" src="script.js"></script>
+
+  <!-- Service Worker Registration -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/service-worker.js')
+          .then(registration => {
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+          })
+          .catch(error => {
+            console.log('ServiceWorker registration failed: ', error);
+          });
+      });
+    }
+  </script>
 </body>
 </html>
