--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CEORater</title>
+  
+  <!-- Favicon and PWA Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="manifest" href="manifest.json">
+
+  <!-- PWA Theme Color -->
+  <meta name="theme-color" content="#4f46e5">
+
+  <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="CEORater">
   <meta property="og:description" content="NASDAQ 100 CEO Performance & Compensation Analytics" />
   <meta property="og:image" content="https://www.ceorater.com/android-chrome-512x512.png" />
@@ -14,7 +23,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
 
   <script>
@@ -139,15 +148,17 @@
       </div>
     </main>
 
-    <footer class="text-center mt-8 text-sm text-gray-500">
-      <p class="mb-2">
-        <a href="/methodology.html" class="text-blue-600 hover:underline">Our Methodology</a>
-      </p>
-      <p>CEORater 2025. A TEK2day Holdings company.</p>
+    <footer class="text-center mt-8 py-8 border-t text-sm text-gray-500">
+        <p class="mb-2">
+            <a href="/methodology.html" class="text-blue-600 hover:underline">Our Methodology</a> | 
+            <a href="/privacy.html" class="text-blue-600 hover:underline">Privacy Policy</a>
+        </p>
+        <p>CEORater 2025. A TEK2day Holdings company.</p>
     </footer>
     
   </div>
 
+  <!-- All your modals and other elements remain the same -->
   <div id="loginModal" class="hidden fixed inset-0 bg-black bg-opacity-50 modal z-50 flex items-center justify-center p-4">
     <div class="bg-white rounded-lg p-6 w-full max-w-md relative">
       <h2 class="text-xl font-bold mb-4">Sign In to CEORater</h2>
@@ -209,5 +220,21 @@
 
   <script src="firebase-config.js"></script>
   <script type="module" src="script.js"></script>
+
+  <!-- Service Worker Registration -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/service-worker.js')
+          .then(registration => {
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+          })
+          .catch(error => {
+            console.log('ServiceWorker registration failed: ', error);
+          });
+      });
+    }
+  </script>
+
 </body>
 </html>
