--- a/privacy.html
+++ b/privacy.html
@@ -87,8 +87,8 @@
                 <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">7. Changes to This Privacy Policy</h3>
                 <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Last Updated" date.</p>
 
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">8. Contact Us</h3>
-                <p>If you have any questions about this Privacy Policy, please contact us at:</p>
+                <h3 id="contact-us" class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">8. Contact Us</h3>
+                <p>If you have any questions about this Privacy Policy, or if you would like to request the deletion of your account and data, please contact us at:</p>
                 <p><a href="mailto:support@ceorater.com" class="text-blue-600 hover:underline"><strong>support@ceorater.com</strong></a></p>
             </div>
         </div>
