--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CEORater</title>
   
-  <!-- Favicon and PWA Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="manifest" href="manifest.json">
 
-  <!-- PWA Theme Color -->
   <meta name="theme-color" content="#4f46e5">
 
-  <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="CEORater">
   <meta property="og:description" content="NASDAQ 100 CEO Performance & Compensation Analytics" />
   <meta property="og:image" content="https://www.ceorater.com/android-chrome-512x512.png" />
@@ -50,11 +47,11 @@
   <header class="bg-white shadow-md sticky top-0 z-30">
     <div class="container mx-auto px-4">
       <div class="flex justify-between items-center py-3">
-        <div class="flex items-center gap-3 sm:gap-6">
+        <div class="flex items-center gap-3 sm:gap-4">
           <h1 class="text-xl sm:text-2xl md:text-3xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
-          <div class="hidden md:flex bg-gray-100 rounded-lg p-1 shadow-inner">
-            <button id="allCeosTab" class="watchlist-tab px-4 py-1.5 rounded-md text-sm font-medium active">All CEOs</button>
-            <button id="watchlistTab" class="watchlist-tab px-4 py-1.5 rounded-md text-sm font-medium">My Watchlist</button>
+          <div class="flex bg-gray-100 rounded-lg p-1 shadow-inner">
+            <button id="allCeosTab" class="watchlist-tab px-2 py-1 md:px-4 md:py-1.5 rounded-md text-sm font-medium active">All CEOs</button>
+            <button id="watchlistTab" class="watchlist-tab px-2 py-1 md:px-4 md:py-1.5 rounded-md text-sm font-medium">My Watchlist</button>
           </div>
         </div>
         <nav class="flex flex-wrap items-center gap-2 sm:gap-3 overflow-x-auto">
@@ -158,7 +155,6 @@
     
   </div>
 
-  <!-- All your modals and other elements remain the same -->
   <div id="loginModal" class="hidden fixed inset-0 bg-black bg-opacity-50 modal z-50 flex items-center justify-center p-4">
     <div class="bg-white rounded-lg p-6 w-full max-w-md relative">
       <h2 class="text-xl font-bold mb-4">Sign In to CEORater</h2>
@@ -221,7 +217,6 @@
   <script src="firebase-config.js"></script>
   <script type="module" src="script.js"></script>
 
-  <!-- Service Worker Registration -->
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
