--- a/index.html
+++ b/index.html
@@ -48,15 +48,20 @@
     <div class="container mx-auto px-4">
       <div class="flex justify-between items-center py-3">
         <div class="flex items-center gap-3 sm:gap-4">
-          <h1 class="text-xl sm:text-2xl md:text-3xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
+          <a href="/" class="flex-shrink-0">
+            <img src="favicon-32x32.png" alt="CEORater Logo" class="block md:hidden h-8 w-8">
+            <h1 class="hidden md:block text-xl sm:text-2xl md:text-3xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
+          </a>
           <div class="flex bg-gray-100 rounded-lg p-1 shadow-inner">
             <button id="allCeosTab" class="watchlist-tab px-2 py-1 md:px-4 md:py-1.5 rounded-md text-sm font-medium active">All CEOs</button>
-            <button id="watchlistTab" class="watchlist-tab px-2 py-1 md:px-4 md:py-1.5 rounded-md text-sm font-medium">My Watchlist</button>
+            <button id="watchlistTab" class="watchlist-tab px-2 py-1 md:px-4 md:py-1.5 rounded-md text-sm font-medium flex items-center">
+              <span>My Watchlist</span>
+              <span id="watchlistCount" class="ml-2 text-xs bg-gray-400 text-white rounded-full px-1.5 py-0.5 hidden">0</span>
+            </button>
           </div>
         </div>
-        <nav class="flex flex-wrap items-center gap-2 sm:gap-3 overflow-x-auto">
-          <button id="watchlistBtn" class="hidden md:inline-block px-3 py-1 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition text-sm">My Watchlist (<span id="watchlistCount">0</span>)</button>
-          <span id="userEmail" class="hidden text-sm text-gray-600 px-3 py-1"></span>
+        <nav class="flex flex-wrap items-center gap-2 sm:gap-3">
+          <span id="userEmail" class="hidden md:inline-block text-sm text-gray-600 px-3 py-1"></span>
           <button id="loginBtn" class="px-3 py-1.5 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition text-sm">Log in</button>
           <button id="logoutBtn" class="hidden px-3 py-1.5 border rounded-lg hover:bg-gray-100 transition text-sm">Log out</button>
         </nav>
