--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <header class="bg-white shadow-md sticky top-0 z-30">
     <div class="container mx-auto px-4">
       <div class="flex justify-between items-center py-3">
-        <div class="flex items-center gap-3 sm:gap-4">
+        <div class="flex items-center flex-wrap gap-x-3 gap-y-2">
           <a href="/" class="flex-shrink-0">
             <img src="favicon-32x32.png" alt="CEORater Logo" class="block md:hidden h-8 w-8">
             <h1 class="hidden md:block text-xl sm:text-2xl md:text-3xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
