--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
   <header class="bg-white shadow-md sticky top-0 z-30">
     <div class="container mx-auto px-4">
-      <div class="flex justify-between items-center py-3">
-        <div class="flex items-center flex-wrap gap-x-3 gap-y-2">
+      <div class="flex justify-between items-center flex-wrap gap-y-3 py-3">
+        <div class="flex items-center gap-x-3">
           <a href="/" class="flex-shrink-0">
             <img src="favicon-32x32.png" alt="CEORater Logo" class="block md:hidden h-8 w-8">
             <h1 class="hidden md:block text-xl sm:text-2xl md:text-3xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
@@ -60,7 +60,7 @@
             </button>
           </div>
         </div>
-        <nav class="flex flex-wrap items-center gap-2 sm:gap-3">
+        <nav class="flex items-center gap-2 sm:gap-3">
           <span id="userEmail" class="hidden md:inline-block text-sm text-gray-600 px-3 py-1"></span>
           <button id="loginBtn" class="px-3 py-1.5 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition text-sm">Log in</button>
           <button id="logoutBtn" class="hidden px-3 py-1.5 border rounded-lg hover:bg-gray-100 transition text-sm">Log out</button>
