--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+  
   <title>CEORater</title>
   
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -16,6 +17,17 @@
   <meta property="og:description" content="NASDAQ 100 CEO Performance & Compensation Analytics" />
   <meta property="og:image" content="https://www.ceorater.com/android-chrome-512x512.png" />
   <meta property="og:url" content="https://www.ceorater.com/" />
+
+  <!-- iOS-Specific PWA Meta Tags (Updated) -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="CEORater">
+  
+  <!-- iOS Splash Screens (Optional but recommended) -->
+  <link rel="apple-touch-startup-image" href="apple-touch-icon.png">
+  
+  <!-- Prevent iOS Safari from auto-detecting phone numbers (if desired) -->
+  <meta name="format-detection" content="telephone=no">
 
   <script src="https://cdn.tailwindcss.com"></script>
   
