--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   
   <title>CEORater</title>
+
+  <link rel="preload" href="https://cdn.tailwindcss.com" as="style">
+  <link rel="preconnect" href="https://docs.google.com">
   
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -250,3 +253,4 @@
 
 </body>
 </html>
+
