--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     
     <div id="statCardContainer" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 mb-6">
       <div class="bg-white p-4 rounded-lg shadow text-center">
-        <h3 class="text-sm font-medium text-gray-500">Median TSR</h3>
+        <h3 class="text-sm font-medium text-gray-500">Median Total Stock Return</h3>
         <p id="medianTsrStat" class="text-2xl font-bold text-gray-900 mt-1">--</p>
       </div>
       <div class="bg-white p-4 rounded-lg shadow text-center">
@@ -252,5 +252,6 @@
 
 </body>
 </html>
+
 
 
