--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   
   <title>CEORater</title>
 
-  <link rel="preconnect" href="https://docs.google.com">
+  <link rel="preconnect" href="https://ceorater-backend-697273542938.us-south1.run.app">
+  <link rel="dns-prefetch" href="https://ceorater-backend-697273542938.us-south1.run.app">
   
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -50,9 +51,9 @@
     }
   </script>
   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-app-compat.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-auth-compat.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-firestore-compat.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-app-compat.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-auth-compat.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-firestore-compat.min.js"></script>
   
   <link rel="stylesheet" href="style.css">
 </head>
@@ -233,7 +234,7 @@
     </div>
   </div>
 
-  <script src="firebase-config.js"></script>
+  <script defer src="firebase-config.js"></script>
   <script type="module" src="script.js"></script>
 
   <script>
@@ -252,6 +253,7 @@
 
 </body>
 </html>
+
 
 
 
