--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
   <meta property="og:image" content="https://www.ceorater.com/android-chrome-512x512.png" />
   <meta property="og:url" content="https://www.ceorater.com/" />
 
+  <!-- Twitter Card tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="CEORater">
+  <meta name="twitter:description" content="NASDAQ 100 CEO Performance & Compensation Analytics">
+  <meta name="twitter:image" content="https://www.ceorater.com/android-chrome-512x512.png">
+
   <!-- iOS-Specific PWA Meta Tags (Updated) -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -260,6 +266,7 @@
 
 </body>
 </html>
+
 
 
 
