--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
   <!-- Prevent iOS Safari from auto-detecting phone numbers (if desired) -->
   <meta name="format-detection" content="telephone=no">
 
+  <link rel="preconnect" href="https://cdn.tailwindcss.com">
+  <link rel="dns-prefetch" href="https://cdn.tailwindcss.com">
   <script src="https://cdn.tailwindcss.com"></script>
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -266,6 +268,7 @@
 
 </body>
 </html>
+
 
 
 
