--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <main class="bg-white rounded-xl shadow-lg p-4 sm:p-6">
       <div id="lastUpdated" class="text-xs text-gray-500 text-right mb-4 h-4"></div>
       <div id="loading" class="flex justify-center items-center h-64"><div id="loading-spinner"></div></div>
-      <div id="error-message" class="hidden text-center text-red-500 py-8">Could not load data from Google Sheets.</div>
+      <div id="error-message" class="hidden text-center text-red-500 py-8">Unable to load market data.</div>
 
       <div>
         <div id="ceoCardView" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6"></div>
@@ -268,6 +268,7 @@
 
 </body>
 </html>
+
 
 
 
