--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
             <select id="sortControl" class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow">
               <option value="alphaScore-desc">Sort: AlphaScore ↓</option>
               <option value="alphaScore-asc">Sort: AlphaScore ↑</option>
+              <option value="compensationScore-asc">Sort: Compensation Score A-F</option>
+              <option value="compensationScore-desc">Sort: Compensation Score F-A</option>
               <option value="tsrAlpha-desc">TSR Alpha ↓</option>
               <option value="tsrAlpha-asc">TSR Alpha ↑</option>
               <option value="avgAnnualTsrAlpha-desc">Avg Annual TSR Alpha ↓</option>
