--- a/methodology.html
+++ b/methodology.html
@@ -27,7 +27,6 @@
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
-    <!-- Header -->
     <header class="bg-white shadow-md">
         <div class="container mx-auto max-w-4xl px-4">
             <div class="flex justify-between items-center py-4">
@@ -37,7 +36,6 @@
         </div>
     </header>
 
-    <!-- Main Content -->
     <main class="container mx-auto max-w-4xl px-4 py-8 md:py-12">
         <div class="bg-white rounded-lg shadow-md p-6 md:p-10">
             <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6 border-b pb-4">
@@ -62,25 +60,18 @@
                       <strong class="font-semibold text-gray-900">TSR vs. QQQ:</strong> Measures the CEO's TSR during their tenure compared to the QQQ Total Return over the same period. It is calculated by subtracting the Total Return of the Invesco QQQ Trust (a proxy for the NASDAQ 100 Index) from the CEO's "TSR During Tenure" over the same period. A positive value indicates the CEO has outperformed the market.
                     </li>
                     <li>
-                      <strong class="font-semibold text-gray-900">Avg Annual TSR:</strong> "TSR During Tenure" divided by that CEO's tenure.
+                      <strong class="font-semibold text-gray-900">Avg Annual TSR:</strong> The annualized total shareholder return during a CEO's tenure, providing a standardized measure of performance over time.
                     </li>
                     <li>
-                      <strong class="font-semibold text-gray-900">Avg Annual TSR vs. QQQ:</strong> Measures the CEO's Average Annual TSR compared to QQQ Average Annual Total Return over the same period. A positive value indicates outperformance against the market.
+                      <strong class="font-semibold text-gray-900">Avg Annual TSR vs. QQQ:</strong> Measures the CEO's Average Annual TSR compared to QQQ Average Annual Total Return over the same period. A positive value indicates year-over-year outperformance against the market.
                     </li>
                   </ul>
                 </div>
         
                 <div>
                   <h3 class="text-2xl font-bold text-gray-800 mb-2 pt-4 border-t mt-6">AlphaScore</h3>
-                  <p>
-                    The AlphaScore is CEORater's proprietary 0-100 rating of a CEO's performance, ranked relative to their NASDAQ 100 peers. A higher score indicates superior, risk-adjusted value creation.
-                  </p>
-                </div>
-        
-                <div>
-                  <h3 class="text-2xl font-bold text-gray-800 mb-3 pt-4 border-t mt-6">Methodology</h3>
                   <p class="mb-3">
-                    The AlphaScore is a blended metric designed to balance the total magnitude of outperformance with the consistency of that outperformance. It is calculated in two steps:
+                    The AlphaScore is CEORater's proprietary 0-100 rating of a CEO's performance, ranked relative to their NASDAQ 100 peers. A higher score indicates superior, risk-adjusted value creation. It is calculated in two steps:
                   </p>
                   <ol class="list-decimal list-outside space-y-3 pl-5">
                     <li>
@@ -94,15 +85,19 @@
                       <strong class="font-semibold text-gray-900">Blended Score:</strong> The AlphaScore is the average of these two percentile ranks, resulting in a single, comprehensive score from 0 to 100.
                     </li>
                   </ol>
-                  <p class="mt-3">
-                    This methodology ensures that the AlphaScore rewards both long-term value creation and the year-over-year skill required to outperform the market.
-                  </p>
                 </div>
+
+                <div>
+                    <h3 class="text-2xl font-bold text-gray-800 mb-2 pt-4 border-t mt-6">CompScore</h3>
+                    <p>
+                        The CompScore is CEORater's proprietary letter-grade rating (A-F, Highest-Lowest), of a CEO's compensation efficiency. It measures a CEO’s total compensation cost per unit of Average Annual Total Stock Return generated during the CEO’s tenure. The lower the total compensation cost per unit of return, the higher the CompScore. 
+                    </p>
+                </div>
+
               </div>
         </div>
     </main>
 
-    <!-- Footer -->
     <footer class="text-center mt-8 py-8 border-t text-sm text-gray-500">
         <p class="mb-2">
             <a href="/" class="text-blue-600 hover:underline">Home</a> | 
